24 May 2006: Wouter
	- unit tests print progress while running to stderr. Included license
	  of cutest with its source in svn repository.
	- stack type (for the IPC buffer of zone update dirty). And unit test.
	- only update zone-is_ok if needed to reduce memory copy on write.
	- split off conn_write() from xfrd tcp nonblocking write routines.
	- nonblocking writes for xfrd.

22 May 2006: Wouter
	- ported over minor nits from 2.3.5 NSD fixups. Cast to (void) 
	  unused function return values.
	- removed kill signal to children, superfluous due to quit cmd ipc.
	- moved is_ok for zones to the zone_type in namedb, not in 
	  the options, it is a runtime value not a config value.
	  For zones that have no data, parent and children keep no state.

12 May 2006: Wouter
	- fixed up usage print for zonec to include -f option.
	- xfrd send notifies.
	- server no longer sends SOA INFO for master zones.
	- removed possible debug log print of a null string.

11 May 2006: Wouter
	- nsd.conf.sample shows defaults for ip4-only, ip6-only and debug-mode.
	- SOA_BEGIN message on start of reload sending soa info so that
	  xfrd will not reply with expire-notifications and thus deadlock
	  both on blocking writes (and no OS buffer on the pipes).

10 May 2006: Wouter
	- nsdc.sh is set +x after creation.
	- improved error message when zone in db has no config info.
	- support for broken nsec3 chains (if the one with the SOA bit
	  is complete, it is OK for there to be other nsec3 chains 
	  with different parameters in the zone).

9 May 2006: Wouter
	- Fix for finding bad zone when populating SOA info on start.
	 it would find a parent zone instead of the zone in question (
	 which is empty).
	- request-xfr: AXFR 10.0.0.153 keytouse syntax to interoperate
	  with NSD machines. Will only send AXFR queries to the machine.
	- documented AXFR option in nsd.conf.5 manual page,
	  and updated nsd-checkconf, nsd.conf.sample.
	- made 'skipping zone' log entry clearer (Sam Weiler asked).
